# weaving-sounds

./: .env  .gitignore  README.md  pyproject.toml
api/: __init__.py  datastore.py  main.py  pp.html  utils.py
models/: exceptions.py  facebook.py  weaver.py
threads/: metadatas.csv
unittests/: __init__.py  conftest.py  test_api.py  test_datastore.py  test_models.py  test_utils.py
unittests/data/facebook/: event_data.json  event_data.yaml  json-to-yaml.py  message_data.json  message_data.yaml  messaging_data.json  messaging_data.yaml  response_message_data.json  response_message_data.yaml
unittests/data/weaver/: prompt.yaml  sound_thread_metadata_valid.yaml  user.yaml  voice_metadata.yaml
