[tool.poetry]
name = "weaving-sounds"
version = "0.1.0"
description = ""
authors = ["tan.winn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
fastapi = "^0.109.1"
uvicorn = "^0.25.0"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
blue-chip = "^0.0.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--cov=./"]

[tool.coverage.run]
omit = ["*/unittests/*"]